# recoverme

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  gpuq.toml  install.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
jax/: .gitignore  README.md  pyproject.toml
jax/native/: Cargo.toml
jax/native/src/: lib.rs
jax/python/recoverme_jax/: __init__.py  _native.pyi  benchmarks.py  cli.py  crypto.py  devices.py  domain.py  runtime.py
jax/tests/: __init__.py  conftest.py  test_crypto.py  test_native_integration.py  test_runtime.py
src/: backend.rs  benchmark.rs  config.rs  crypto.rs  cube_backend.rs  domain.rs  engine.rs  error.rs  hybrid_backend.rs  input.rs  lib.rs  main.rs  mnemonic.rs  mnemonic_engine.rs  mnemonic_state.rs  search.rs  state.rs
tests/: cuda_benchmark.rs  cuda_canary.rs
tests/cuda-canary/: Dockerfile  Dockerfile.dockerignore  build-image.sh
