[build-system]
requires = ["maturin>=1.9,<2"]
build-backend = "maturin"

[project]
name = "recoverme-jax"
version = "0.2.0"
description = "JAX BIP39 passphrase recovery using recoverme's Rust recovery core"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT OR Apache-2.0"
authors = [{ name = "Praveen Perera" }]
dependencies = [
  "jax>=0.7",
  "numpy>=2",
]

[project.optional-dependencies]
cuda12 = ["jax[cuda12]>=0.7; sys_platform == 'linux'"]
cuda13 = ["jax[cuda13]>=0.7; sys_platform == 'linux'"]

[project.scripts]
recoverme-jax = "recoverme_jax.cli:main"

[dependency-groups]
dev = [
  "mnemonic>=0.21",
  "mypy>=1.17",
  "pytest>=8.4",
  "ruff>=0.12",
]

[tool.uv]
conflicts = [
  [
    { extra = "cuda12" },
    { extra = "cuda13" },
  ],
]

[tool.maturin]
manifest-path = "native/Cargo.toml"
python-source = "python"
module-name = "recoverme_jax._native"
features = ["pyo3/extension-module"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",
  "D203",
  "D213",
  "EM101",
  "EM102",
  "FBT003",
  "TRY003",
]

[tool.ruff.lint.per-file-ignores]
"python/recoverme_jax/cli.py" = ["PLR0913", "T201"]
"tests/**/*.py" = ["D103", "PLR2004", "S101", "S105", "TC003"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["recoverme_jax"]
mypy_path = "python"

[tool.pytest.ini_options]
addopts = "-ra"
markers = [
  "cuda: requires a JAX NVIDIA CUDA device",
]
testpaths = ["tests"]
