[package]
name = "recoverme-jax-native"
version = "0.1.0"
edition = "2021"

[lib]
name = "_native"
crate-type = ["cdylib", "rlib"]

[dependencies]
ndarray = "0.17"
numpy = "0.27"
pyo3 = { version = "0.27", features = ["extension-module"] }
recoverme = { path = "../.." }
serde_json = "1"
zeroize = "1.8"

[dev-dependencies]
tempfile = "3"
