[package]
name = "recoverme-jax-native"
version = "0.2.0"
edition = "2021"
rust-version = "1.87"
authors = ["Praveen Perera"]
description = "Experimental JAX bridge for recoverme"
license = "MIT OR Apache-2.0"

[lib]
name = "_native"
crate-type = ["cdylib", "rlib"]

[dependencies]
ndarray = "0.17"
numpy = "0.27"
pyo3 = { version = "0.27", features = ["extension-module"] }
recoverme = { path = "../.." }
serde_json = "1"
zeroize = "1.8"

[dev-dependencies]
tempfile = "3"
